--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="8dp">
 
     <ImageView
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_below="@+id/tvUsername"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="30dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -19,24 +19,36 @@
         android:id="@+id/tvDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivImage"
-        android:layout_marginTop="0dp"
+        android:layout_below="@+id/tvTimeCreated"
+        android:layout_marginTop="23dp"
         android:layout_marginBottom="8dp"
         tools:text="Look at me flexing" />
-
-    <TextView
-        android:id="@+id/tvUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        tools:text="Gianna" />
 
     <TextView
         android:id="@+id/tvTimeCreated"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ivImage"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="0dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="359dp"
         android:textColor="#000000"
         tools:text="19:02" />
+
+    <ImageView
+        android:id="@+id/ivProfileImage"
+        android:layout_width="39dp"
+        android:layout_height="34dp"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="87dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="258dp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        tools:text="Gianna" />
 </RelativeLayout>
