--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".fragments.PostsFragment">
 
-        <ProgressBar
-            android:id="@+id/pbLoading"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="302dp"
-            android:layout_marginEnd="151dp"
-            android:visibility="visible" />
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="302dp"
+        android:layout_marginEnd="151dp"
+        android:visibility="visible" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPosts"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
+        android:layout_height="551dp"
         android:layout_below="@+id/btnChange"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="29dp"
         android:layout_marginBottom="0dp"
         android:padding="8dp" />
 
@@ -34,17 +34,19 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="26dp"
-        android:layout_marginTop="41dp" />
+        android:layout_marginTop="26dp" />
 
     <Button
         android:id="@+id/btnChange"
-        android:layout_width="162dp"
-        android:layout_height="wrap_content"
+        android:layout_width="359dp"
+        android:layout_height="37dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
-        android:layout_marginEnd="6dp"
-        android:text="Change Profile Image" />
+        android:layout_marginTop="118dp"
+        android:layout_marginEnd="27dp"
+        android:backgroundTint="#009688"
+        android:text="Change Profile Image"
+        android:textColor="#FFFFFF" />
 
     <TextView
         android:id="@+id/tvUsername"
@@ -54,6 +56,7 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="19dp"
         android:layout_toEndOf="@+id/ivProfileImage"
+        android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="GG5642" />
