--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_marginBottom="5dp">
 
     <TextView
         android:id="@+id/tvComment"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="2dp"
+        android:layout_toEndOf="@+id/ivProfileImage"
         tools:layout_editor_absoluteX="137dp"
         tools:layout_editor_absoluteY="46dp"
         tools:text="I like raspberry pie" />
 
     <ImageView
         android:id="@+id/ivProfileImage"
-        android:layout_width="55dp"
-        android:layout_height="44dp"
+        android:layout_width="36dp"
+        android:layout_height="26dp"
         tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
