--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,4 +60,16 @@
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="GG5642" />
+
+    <Button
+        android:id="@+id/btnSignOut"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="25dp"
+        android:backgroundTint="#E91E63"
+        android:text="Sign Out"
+        android:textColor="#FFFFFF" />
 </RelativeLayout>
