--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -30,8 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivLike"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="35dp"
         android:textColor="#000000"
         tools:text="19:02" />
 
@@ -70,4 +70,15 @@
         android:layout_marginTop="15dp"
         android:layout_toEndOf="@+id/ivLike"
         app:srcCompat="@drawable/ufi_comment" />
+
+    <TextView
+        android:id="@+id/tvLikes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivLike"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="5dp"
+        android:textStyle="bold"
+        tools:text="60 likes" />
 </RelativeLayout>
