--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -19,14 +19,26 @@
 
     <Button
         android:id="@+id/btnCapture"
-        android:layout_width="150dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnSubmit"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="117dp"
-        android:backgroundTint="#D6386E"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="104dp"
+        android:backgroundTint="#009688"
         android:text="Capture"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/btnGallery"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnSubmit"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="62dp"
+        android:layout_marginEnd="104dp"
+        android:backgroundTint="#009688"
+        android:text="Pick from Gallery"
         android:textColor="#FFFFFF" />
 
     <ImageView
@@ -39,12 +51,12 @@
 
     <Button
         android:id="@+id/btnSubmit"
-        android:layout_width="150dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivMedia"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="136dp"
-        android:layout_marginEnd="116dp"
+        android:layout_marginTop="107dp"
+        android:layout_marginEnd="104dp"
         android:backgroundTint="#009688"
         android:shadowColor="#009688"
         android:text="Post"
