--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivMedia"
-        android:layout_marginStart="-35dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="-37dp"
+        android:layout_marginTop="56dp"
         android:layout_marginBottom="0dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="Look at me flexing" />
@@ -45,7 +45,6 @@
         android:layout_below="@+id/tvDescription"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="7dp" />
-
     <ImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="40dp"
@@ -57,8 +56,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="6dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -69,7 +68,7 @@
         android:layout_width="match_parent"
         android:layout_height="222dp"
         android:layout_below="@+id/tvUsername"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="25dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
@@ -77,7 +76,7 @@
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_below="@+id/ivMedia"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="15dp"
         tools:srcCompat="@drawable/ufi_heart" />
 
     <TextView
@@ -88,5 +87,19 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="5dp"
         android:layout_toEndOf="@+id/ivLike"
+        android:textColor="#000000"
+        android:textStyle="bold"
         tools:text="70 likes" />
+
+    <TextView
+        android:id="@+id/tvDateTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/ivLike"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="5dp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        tools:text="3 h" />
 </RelativeLayout>
