--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,22 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginBottom="5dp">
 
     <TextView
         android:id="@+id/tvComment"
         android:layout_width="329dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="2dp"
+        android:layout_marginTop="26dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:layout_editor_absoluteX="137dp"
         tools:layout_editor_absoluteY="46dp"
         tools:text="I like raspberry pie" />
 
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="137dp"
+        tools:layout_editor_absoluteY="46dp"
+        tools:text="GG5642" />
+
     <ImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="36dp"
         android:layout_height="26dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="8dp"
         tools:srcCompat="@tools:sample/avatars" />
 </RelativeLayout>
