--- a/app/src/main/res/layout/activity_profile_details.xml
+++ b/app/src/main/res/layout/activity_profile_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     android:background="#FFFFFF"
     tools:context=".fragments.PostsFragment">
 
@@ -33,8 +34,8 @@
         android:layout_height="65dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="26dp" />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp" />
 
     <TextView
         android:id="@+id/tvUsername"
@@ -48,4 +49,15 @@
         android:textSize="18sp"
         android:textStyle="bold"
         tools:text="GG5642" />
+
+    <ImageView
+        android:id="@+id/ivGoBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:src="@android:drawable/ic_delete" />
+
 </RelativeLayout>
